# pyvlcb

./: .gitignore  404.html  LICENSE  README.md  addbuttondialog.py  adddevicedialog.py  addeventdialog.py  addlabeldialog.py  addlocodialog.py  addlocodialog.ui  addyarddialog.py  apihandler.py  app.py  appevent.py  appvar.py  appvars.py  automateevent.py  automationadddialog.py  automationdialogrows.py  automationmanager.py  automationmanagerdialog.py  automationrule.py  automationrunner.py  automationseqdialog.py  automationsequence.py  automationstepdialog.py  canusb.py  configfiles.md  console.ui  consolewindow.py  controldevices.py  controllayout.py  controlloco.py  device.py  deviceevent.py  deviceevents.py  devicemodel.py  editeventdialog.py  editgbuttondialog.ui  editglabeldialog.ui  (+67 more)
.github/workflows/: docs.yml  publish.yml  tests.yml
c-server/: info.txt  vlcbserver  vlcbserver.c
data/: layout.json
data/locos/: 5190-prairie.json  68696-j72.json
demo/: discover.py  moveloco.py
docs/: apiformat.md  automation-planning.md  dataflow.odg  index.md  reference.md  spec.md
docs/stylesheets/: extra.css
examples/: app.py
pyvlcb/: __init__.py  canusb.py  vlcbformat.py
pyvlcb/tests/: run_tests.py
reference/: index.html
search/: search_index.json
spec/: index.html
src/pyvlcb/: __init__.py  canusb.py  exceptions.py  utils.py  vlcbformat.py
src/pyvlcb/tests/: test_canusb4.py  test_vlcb.py
tests/: old_test_event_bus.py  run_tests.py  test_automationrules.py  test_automationrunner.py  test_automationsequence.py  test_automationsequenceserialization.py  test_device_model.py  test_event_bus.py  test_vlcb.py
vlcbserver/: __init__.py  canusb.py  info.txt
vlcbserver/requests/: __init__.py  routes.py
